--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
 
                         <div class="home__data">
                             <h1 class="home__title">Hi, I am Salma Benslimane</h1>
-                            <h3 class="home__subtitle">Generalist Engineer</h3>
-                            <p class="home__description">Second Year Generalist Student Engineer at Ecole Centrale Casablanca with a specialization in Data analysis and AI Engineering.</p>
+                            <h3 class="home__subtitle">Welcome to my portfolio! </h3>
+                            <p class="home__description">Second Year Data science student at Centrale Casablanca. Currently in exchange at Centrale Marseille with a specialization in Digital Society and AI Engineering.</p>
                             <a href="#contact" class="button button--flex">
                                 Contact Me <i class="uil uil-message button__icon"></i>
                             </a>
@@ -184,14 +184,14 @@
             <!--==================== ABOUT ====================-->
             <section class="about section" id="about" data-id="about">
                 <h2 class="section__title">About Me</h2>
-                <span class="section__subtitle">Introduction</span>
+                <span class="section__subtitle">INTRODUCTION</span>
 
                 <div class="about__container container grid">
                     <img src="assets/img/about.png" alt="Erol Bicer Nuclear Power Plants Summit Session" class="about__img">
 
 
                     <div class="about__data">
-                        <p class="about__description">It all started with a passion for mathematics, computer science, and the inner workings of technology. Now, I'm pursuing System Engineering and Management, with a focus on AI engineering, data analysis, and web technology. Welcome to my portfolio.</p>
+                        <p class="about__description">It all started with a passion for mathematics, computer science, and the inner workings of technology. Now, I'm pursuing Systems' Engineering, with a specialization in Information Science and Digital Society. Welcome to my portfolio.</p>
 
 
                         <div class="about__buttons">
@@ -272,17 +272,7 @@
                                     <div class="skills__bar">
                                         <span class="skills__percantage skills__80"></span>
                                     </div>
-                                </div>
-
-                                <div class="skills__data">
-                                    <div class="skills__titles">
-                                        <h3 class="skills__name">C++</h3>
-                                        <span class="skills__number">Beginner</span> 
-                                    </div>
-                                    <div class="skills__bar">
-                                        <span class="skills__percantage skills__20"></span>
-                                    </div>
-                                </div>
+                                </div
                             </div>
                         </div>
 
