--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
             <section class="skills section" id="skills" data-id="skills">
                 <h2 class="section__title">Skills</h2>
                 <span class="section__subtitle">Technical Competence</span>
-
+                
+            <div class="skills__center"> 
                 <div class="skills__container container grid">
                     <div>
                         <!--==================== SKILLS 1 ====================-->
