--- a/index.html
+++ b/index.html
@@ -363,7 +363,15 @@
                                     </div>
                                 </div>
 
-                            
+                            <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">Artificial Neural Networks</h3>
+                                        <span class="skills__number">Proficient</span> 
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percantage skills__80"></span>
+                                    </div>
+                                </div>
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
