--- a/index.html
+++ b/index.html
@@ -523,6 +523,11 @@
                         <div class="qualification__content qualification__active" data-content id="education">
                          <!--==================== QUALIFICATION  1====================-->
                              <div class="qualification__data">
+                                 <div></div>
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                    <span class="qualification__line"></span>
+                                </div>
                                 <div>
                                     <span class="qualification__degree">Marseille, France</span>
                                     <h3 class="qualification__tittle"> Exchange semester in Information Science and Digital Science</h3>
@@ -539,6 +544,11 @@
                             </div>
                              <!--==================== QUALIFICATION  2 ====================-->
                              <div class="qualification__data">
+                                    <div></div>
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                    <span class="qualification__line"></span>
+                                </div>
                                 <div>
                                     <span class="qualification__degree">Casablanca, Morocco</span>
                                     <h3 class="qualification__tittle">Systems' Engineering, Data science option</h3>
