--- a/index.html
+++ b/index.html
@@ -564,21 +564,22 @@
 
                              <!--==================== QUALIFICATION  4 ====================-->
                              <div class="qualification__data">
-                                <!-- <div></div> -->
+                                 <div></div> 
 
-                                <!-- <div>
-                                    <span class="qualification__rounder"></span> -->
-                                    <!-- <span class="qualification__line"></span> -->
-                                <!-- </div> -->
+                                <div>
+                                    <span class="qualification__rounder"></span> 
+                                     <span class="qualification__line"></span> 
+                                
+                                     </div> 
 
-                                <!-- <div>
-                                    <h3 class="qualification__tittle">Nuclear Engineer</h3>
+                                 <div>
+                                    <span class="qualification__tittle">Nuclear Engineer</h3>
                                     <span class="qualification__subtitle">Hacettepe University</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
                                         2008 - 2013
                                     </div>
-                                </div> -->
+                                </div> 
              <!--==================== QUALIFICATION CONTENT 2 ====================-->
                         <div class="qualification__content" data-content id="work">
                             <!--==================== QUALIFICATION  1 ====================-->
