--- a/index.html
+++ b/index.html
@@ -499,8 +499,7 @@
 
 
 
-
-   <!--==================== QUALIFICATION ====================-->
+<!--==================== QUALIFICATION ====================-->
 <section class="qualification section">
     <h2 class="section__title">Qualifications</h2>
     <span class="section__subtitle">Academic and Professional Career</span>
@@ -521,7 +520,7 @@
             <!--==================== QUALIFICATION CONTENT 1 ====================-->
             <div class="qualification__content qualification__active" data-content id="education">
 
-                <!--==================== QUALIFICATION  3 ====================-->
+                <!--==================== QUALIFICATION 3 & 4 (LEFT & RIGHT) ====================-->
                 <div class="qualification__data">
                     <div>
                         <span class="qualification__degree">Meknes, Morocco</span>
@@ -531,18 +530,6 @@
                             <i class="uil uil-calendar-alt"></i>
                             2020 - 2022
                         </div>
-                    </div>
-                    <div>
-                        <span class="qualification__rounder"></span>
-                        <span class="qualification__line"></span>
-                    </div>
-                </div>
-
-                <!--==================== QUALIFICATION  4====================-->
-                <div class="qualification__data">
-                    <div>
-                        <span class="qualification__rounder"></span>
-                        <span class="qualification__line"></span>
                     </div>
                     <div>
                         <span class="qualification__degree">Meknes, Morocco</span>
@@ -555,7 +542,7 @@
                     </div>
                 </div>
 
-                <!--==================== QUALIFICATION  5====================-->
+                <!--==================== QUALIFICATION 5 & 6 (LEFT & RIGHT) ====================-->
                 <div class="qualification__data">
                     <div>
                         <span class="qualification__degree">Your Location</span>
@@ -567,28 +554,20 @@
                         </div>
                     </div>
                     <div>
-                        <span class="qualification__rounder"></span>
-                        <span class="qualification__line"></span>
+                        <span class="qualification__degree">Your Location</span>
+                        <h3 class="qualification__tittle">Your Degree Name</h3>
+                        <span class="qualification__subtitle">Your School/University</span>
+                        <div class="qualification__calendar">
+                            <i class="uil uil-calendar-alt"></i>
+                            Year Start - Year End
+                        </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</section>
 
-                <!--==================== QUALIFICATION  6====================-->
-                <div class="qualification__data">
-                    <div>
-                        <span class="qualification__rounder"></span>
-                        <span class="qualification__line"></span>
-                    </div>
-                    <div>
-                        <span class="qualification__degree">Your Location</span>
-                        <h3 class="qualification__tittle">Your Degree Name</h3>
-                        <span class="qualification__subtitle">Your School/University</span>
-                        <div class="qualification__calendar">
-                            <i class="uil uil-calendar-alt"></i>
-                            Year Start - Year End
-                        </div>
-                    </div>
-                </div>
-       
 
 
                         
