--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
             <!--==================== QUALIFICATION CONTENT 1 ====================-->
             <div class="qualification__content qualification__active" data-content id="education">
 
-                <!--==================== QUALIFICATION 3 & 4 (LEFT & RIGHT) ====================-->
+                <!--==================== QUALIFICATION  3 ====================-->
                 <div class="qualification__data">
                     <div>
                         <span class="qualification__degree">Meknes, Morocco</span>
@@ -530,6 +530,18 @@
                             <i class="uil uil-calendar-alt"></i>
                             2020 - 2022
                         </div>
+                    </div>
+                    <div>
+                        <span class="qualification__rounder"></span>
+                        <span class="qualification__line"></span>
+                    </div>
+                </div>
+
+                <!--==================== QUALIFICATION  4====================-->
+                <div class="qualification__data">
+                    <div>
+                        <span class="qualification__rounder"></span>
+                        <span class="qualification__line"></span>
                     </div>
                     <div>
                         <span class="qualification__degree">Meknes, Morocco</span>
@@ -542,7 +554,7 @@
                     </div>
                 </div>
 
-                <!--==================== QUALIFICATION 5 & 6 (LEFT & RIGHT) ====================-->
+                <!--==================== QUALIFICATION  5====================-->
                 <div class="qualification__data">
                     <div>
                         <span class="qualification__degree">Your Location</span>
@@ -554,6 +566,18 @@
                         </div>
                     </div>
                     <div>
+                        <span class="qualification__rounder"></span>
+                        <span class="qualification__line"></span>
+                    </div>
+                </div>
+
+                <!--==================== QUALIFICATION  6====================-->
+                <div class="qualification__data">
+                    <div>
+                        <span class="qualification__rounder"></span>
+                        <span class="qualification__line"></span>
+                    </div>
+                    <div>
                         <span class="qualification__degree">Your Location</span>
                         <h3 class="qualification__tittle">Your Degree Name</h3>
                         <span class="qualification__subtitle">Your School/University</span>
@@ -563,6 +587,11 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</section>
+
             </div>
         </div>
     </div>
