--- a/index.html
+++ b/index.html
@@ -499,94 +499,64 @@
 
 
 
-<!--==================== QUALIFICATION ====================-->
-<section class="qualification section">
-    <h2 class="section__title">Qualifications</h2>
-    <span class="section__subtitle">Academic and Professional Career</span>
+    <!--==================== QUALIFICATION ====================-->
+            <section class="qualification section">
+                <h2 class="section__title">Qualifications</h2>
+                <span class="section__subtitle">Academic and Professional Career</span>
 
-    <div class="qualification__container container">
-        <div class="qualification__tabs">
-            <div class="qualification__button button--flex qualification__active" data-target="#education">
-                <i class="uil uil-graduation-cap qualification__icon"></i>
-                Education
-            </div>
+                <div class="qualification__container container">
+                    <div class="qualification__tabs">
+                        <div class="qualification__button button--flex qualification__active" data-target="#education">
+                            <i class="uil uil-graduation-cap qualification__icon"></i>
+                            Education
+                        </div>
 
-            <div class="qualification__button button--flex" data-target="#work">
-                <i class="uil uil-briefcase-alt qualification__icon"></i>
-                Work
-            </div>
-        </div>
-        <div class="qualification__sections">
-            <!--==================== QUALIFICATION CONTENT 1 ====================-->
-            <div class="qualification__content qualification__active" data-content id="education">
-
-                <!--==================== QUALIFICATION  3 ====================-->
-                <div class="qualification__data">
-                    <div>
-                        <span class="qualification__degree">Meknes, Morocco</span>
-                        <h3 class="qualification__tittle">CPGE - MP/MPSI A</h3>
-                        <span class="qualification__subtitle">Lycée Omar Ibn Al Khattab</span>
-                        <div class="qualification__calendar">
-                            <i class="uil uil-calendar-alt"></i>
-                            2020 - 2022
+                        <div class="qualification__button button--flex" data-target="#work">
+                            <i class="uil uil-briefcase-alt qualification__icon"></i>
+                            Work
                         </div>
                     </div>
-                    <div>
-                        <span class="qualification__rounder"></span>
-                        <span class="qualification__line"></span>
-                    </div>
-                </div>
+                    <div class="qualification__sections">
+                     <!--==================== QUALIFICATION CONTENT 1 ====================-->
+                        <div class="qualification__content qualification__active" data-content id="education">
+                        
+                       
+                             <!--==================== QUALIFICATION  3 ====================-->
+                             <div class="qualification__data">
+                                <div>
+                                    <span class="qualification__degree">Meknes, Morocco</span>
+                                    <h3 class="qualification__tittle">CPGE - MP/MPSI A</h3>
+                                    <span class="qualification__subtitle">Lycée Omar Ibn Al Khattab</span>
+                                    <div class="qualification__calendar">
+                                        <i class="uil uil-calendar-alt"></i>
+                                        2020 - 2022
+                                    </div>
+                                </div>
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                    <span class="qualification__line"></span>
+                                </div>
+                            </div>
 
-                <!--==================== QUALIFICATION  4====================-->
-                <div class="qualification__data">
-                    <div>
-                        <span class="qualification__rounder"></span>
-                        <span class="qualification__line"></span>
-                    </div>
-                    <div>
-                        <span class="qualification__degree">Meknes, Morocco</span>
-                        <h3 class="qualification__tittle">Mathematical Science Baccalaureat </h3>
-                        <span class="qualification__subtitle">Flowers High School</span>
-                        <div class="qualification__calendar">
-                            <i class="uil uil-calendar-alt"></i>
-                            2019 - 2020
-                        </div>
-                    </div>
-                </div>
+                             <!--==================== QUALIFICATION  4====================-->
+                             <div class="qualification__data">
+                                <div></div>
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                    <span class="qualification__line"></span>
+                                </div>
 
-                <!--==================== QUALIFICATION  5====================-->
-                <div class="qualification__data">
-                    <div>
-                        <span class="qualification__degree">Your Location</span>
-                        <h3 class="qualification__tittle">Your Degree Name</h3>
-                        <span class="qualification__subtitle">Your School/University</span>
-                        <div class="qualification__calendar">
-                            <i class="uil uil-calendar-alt"></i>
-                            Year Start - Year End
-                        </div>
-                    </div>
-                    <div>
-                        <span class="qualification__rounder"></span>
-                        <span class="qualification__line"></span>
-                    </div>
-                </div>
+                                <div>
+                                    <span class="qualification__degree">Meknes, Morocco</span>
+                                    <h3 class="qualification__tittle">Mathematical science Baccalaureat </h3>
+                                    <span class="qualification__subtitle">Flowers High School</span>
+                                    <div class="qualification__calendar">
+                                        <i class="uil uil-calendar-alt"></i>
+                                        2019 - 2020
+                                    </div>
+                                </div>
 
-                <!--==================== QUALIFICATION  6====================-->
-                <div class="qualification__data">
-                    <div>
-                        <span class="qualification__rounder"></span>
-                        <span class="qualification__line"></span>
-                    </div>
-                    <div>
-                        <span class="qualification__degree">Your Location</span>
-                        <h3 class="qualification__tittle">Your Degree Name</h3>
-                        <span class="qualification__subtitle">Your School/University</span>
-                        <div class="qualification__calendar">
-                            <i class="uil uil-calendar-alt"></i>
-                            Year Start - Year End
-                        </div>
-                    </div>
-                </div>
+                            </div>
             </div>
         </div>
     </div>
