--- a/index.html
+++ b/index.html
@@ -522,12 +522,12 @@
                              <!--==================== QUALIFICATION  1 ====================-->
                              <div class="qualification__data">
                                 <div>
-                                    <span class="qualification__degree">Meknès</span>
-                                    <h3 class="qualification__tittle">Bac Sciences math A</h3>
-                                    <span class="qualification__subtitle">Lycée Flowers High School</span>
+                                    <span class="qualification__degree">Marseille, France</span>
+                                    <h3 class="qualification__tittle">Ecole Centrale Méditerranée</h3>
+                                    <span class="qualification__subtitle">Excheange semester - Information Science & Digital Society</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2019 - 2020 
+                                        2024 - Present 
                                     </div>
                                 </div>
                                 <div>
@@ -545,12 +545,12 @@
                                 </div>
 
                                 <div>
-                                    <span class="qualification__degree">Meknès</span>
-                                    <h3 class="qualification__tittle">CPGE - MP/MPSI </h3>
-                                    <span class="qualification__subtitle">Lycée Omar Ibn Al Khattab</span>
+                                    <span class="qualification__degree">Casablanca, Morocco</span>
+                                    <h3 class="qualification__tittle">Ecole Centrale Casablanca </h3>
+                                    <span class="qualification__subtitle">Systems' Engineering - Specialisation in Data science</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2020 - 2022
+                                        2022 - Present 
                                     </div>
                                 </div>
 
@@ -559,12 +559,12 @@
                              <!--==================== QUALIFICATION  3 ====================-->
                              <div class="qualification__data">
                                 <div>
-                                    <span class="qualification__degree">Casablanca</span>
-                                    <h3 class="qualification__tittle">Generalist Engineering</h3>
-                                    <span class="qualification__subtitle">École Centrale Casablanca</span>
+                                    <span class="qualification__degree">Meknes, Morocco</span>
+                                    <h3 class="qualification__tittle">Classes Préparatoires aux Grandes Ecoles</h3>
+                                    <span class="qualification__subtitle">Maths - Physics - Engineering science</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2022 - Present
+                                        2020 - 2022
                                     </div>
                                 </div>
                                 <div>
@@ -602,8 +602,8 @@
                             <!--==================== QUALIFICATION  1 ====================-->
                             <div class="qualification__data">
                                <div>
-                                   <h3 class="qualification__tittle">Intern Fullstack Developper</h3>
-                                   <span class="qualification__subtitle">Aicha</span>
+                                   <h3 class="qualification__tittle">Python Developer Intern at LCM AICHA</h3>
+                                   <span class="qualification__subtitle">Development of an Inventory management plateform for the digital transformation of AICHA</span>
                                    <div class="qualification__calendar">
                                        <i class="uil uil-calendar-alt"></i>
                                        2023
