--- a/index.html
+++ b/index.html
@@ -578,8 +578,8 @@
                                 <div></div> 
 
                                  <div>
-                                    <span class="qualification__rounder"></span> -->
-                                     <span class="qualification__line"></span> -->
+                                    <span class="qualification__rounder"></span> 
+                                     <span class="qualification__line"></span> 
                                  </div> 
 
                                  <div>
