--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                                 </div>
                                 <div>
                                     <span class="qualification__rounder"></span>
-                                    <!-- <span class="qualification__line"></span> -->
+                                     <span class="qualification__line"></span>
                                 </div>
                             </div>
 
