--- a/index.html
+++ b/index.html
@@ -560,11 +560,11 @@
                              <div class="qualification__data">
                                 <div>
                                     <span class="qualification__degree">Meknes, Morocco</span>
-                                    <h3 class="qualification__tittle">Classes Préparatoires aux Grandes Ecoles</h3>
-                                    <span class="qualification__subtitle">Maths - Physics - Engineering science</span>
+                                    <h3 class="qualification__tittle">Flowers High School</h3>
+                                    <span class="qualification__subtitle">Mathematical Science Baccalaureat - Mention Très bie</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2020 - 2022
+                                        2019 - 2020
                                     </div>
                                 </div>
                                 <div>
@@ -583,6 +583,7 @@
                                  </div> 
 
                                  <div>
+                                     <span class="qualification__degree">Meknes, Morocco</span>
                                     <h3 class="qualification__tittle">Nuclear Engineer</h3>
                                     <span class="qualification__subtitle">Hacettepe University</span>
                                     <div class="qualification__calendar">
@@ -649,7 +650,7 @@
                     <div class="projects__content">
                         <div>
                             <i class="uil uil-swatchbook projects__icon"></i>
-                            <h3 class="projects__title">Coding Week ML</h3>
+                            <h3 class="projects__title">Machine Learning Project</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link projects__button">
@@ -684,7 +685,7 @@
                     <div class="projects__content">
                         <div>
                             <i class="uil uil-swatchbook projects__icon"></i>
-                            <h3 class="projects__title">AI in IOT</h3>
+                            <h3 class="projects__title">AI & IOT Project</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link projects__button">
@@ -694,7 +695,7 @@
 
                         <div class="projects__modal">
                             <div class="projects__modal-content">
-                                <h4 class="projects__modal-title">• Integration of AI in IOT devices</h4>
+                                <h4 class="projects__modal-title">PredictA Industry: the real-time solution for predictive maintenance</h4>
                                 <i class="uil uil-times projects__modal-close"></i>
 
                                 <ul class="projects__modal-projects grid">
@@ -735,7 +736,7 @@
                     <div class="projects__content">
                         <div>
                             <i class="uil uil-swatchbook projects__icon"></i>
-                            <h3 class="projects__title">GAN in the Air</h3>
+                            <h3 class="projects__title">Deep Learning Project</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link projects__button">
@@ -745,7 +746,7 @@
 
                         <div class="projects__modal">
                             <div class="projects__modal-content">
-                                <h4 class="projects__modal-title">Deep Adversarial Learning for Wireless Signal Spoofing</h4>
+                                <h4 class="projects__modal-title">Generative Adversarial Learning (GAN) for Wireless Signal Spoofing</h4>
                                 <i class="uil uil-times projects__modal-close"></i>
 
                                 <ul class="projects__modal-projects grid">
@@ -770,7 +771,7 @@
                     <div class="projects__content">
                         <div>
                             <i class="uil uil-swatchbook projects__icon"></i>
-                            <h3 class="projects__title">Portfolio</h3>
+                            <h3 class="projects__title">E-Portfolio</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link projects__button">
