--- a/index.html
+++ b/index.html
@@ -649,6 +649,7 @@
                     <!--==================== PROJECTS 1 ====================-->
                     <div class="projects__content">
                         <div>
+                            <img src="path/to/your/image1.jpg" alt="Project Image 1" class="projects__image">
                             <i class="uil uil-swatchbook projects__icon"></i>
                             <h3 class="projects__title">Machine Learning Project</h3>
                         </div>
