--- a/index.html
+++ b/index.html
@@ -647,9 +647,9 @@
 
                 <div class="projects__container container grid">
                     <!--==================== PROJECTS 1 ====================-->
-                    <div class="projects__content">
-                        <div>
-                            <img src="PredictA.jpg" alt="Project Image 1" class="projects__image">
+              
+                 <div class="projects__content" style="background-image: url('PredictA.jpg');">
+                         <div>
                             <i class="uil uil-swatchbook projects__icon"></i>
                             <h3 class="projects__title">Machine Learning Project</h3>
                         </div>
