--- a/index.html
+++ b/index.html
@@ -664,20 +664,20 @@
                                 <h4 class="projects__modal-title">Detection Of Microcalcifications In Mammography </h4>
                                 <i class="uil uil-times projects__modal-close"></i>
 
-                                <ul class="projects__modal-projects grid">
-                                    <li class="projects__modal-project">
-                                        <i class="uil uil-check-circle projects__modal-icon"></i>
-                                        <p>Conducted extensive analysis using machine learning models (KNN, SVM, random forest) with various parameter settings to detect mammographic microcalcifications.</p>
-                                    </li>
-                                    <li class="projects__modal-project">
-                                        <i class="uil uil-check-circle projects__modal-icon"></i>
-                                        <p>Emphasized the importance of early microcalcification detection in breast cancer screening.</p>
-                                    </li>
-                                    <li class="projects__modal-project">
-                                        <i class="uil uil-check-circle projects__modal-icon"></i>
-                                        <p>Overcame challenges posed by a highly imbalanced dataset while being supervised by ECC CODING WEEK.</p>
-                                    </li>
-                                </ul>
+                              <ul class="projects__modal-projects grid">
+    <li class="projects__modal-project">
+        <i class="uil uil-check-circle projects__modal-icon"></i>
+        <p>Conducted extensive analysis using machine learning models (KNN, SVM, random forest) with various parameter settings to detect mammographic microcalcifications.</p>
+    </li>
+    <li class="projects__modal-project">
+        <i class="uil uil-check-circle projects__modal-icon"></i>
+        <p>Emphasized the importance of early microcalcification detection in breast cancer screening.</p>
+    </li>
+    <li class="projects__modal-project">
+        <i class="uil uil-check-circle projects__modal-icon"></i>
+        <p>Overcame challenges posed by a highly imbalanced dataset while being supervised by ECC CODING WEEK. View the code of my project <a href="https://github.com/salmabenslimane/Mammogram-Microcalcification-Detection" title="View the code of my project" target="_blank">here</a>.</p>
+    </li>
+</ul>
                             </div>
                         </div>
                     </div> 
