--- a/index.html
+++ b/index.html
@@ -648,16 +648,18 @@
                 <div class="projects__container container grid">
                     <!--==================== PROJECTS 1 ====================-->
               
-                 <div class="projects__content" style="background-image: url('PredictA.jpg');">
-                         <div>
-                            <i class="uil uil-swatchbook projects__icon"></i>
-                            <h3 class="projects__title">Machine Learning Project</h3>
-                        </div>
+                 <div class="projects__content project1">
+    <div>
+        <i class="uil uil-swatchbook projects__icon"></i>
+        <h3 class="projects__title">Coding Week ML</h3>
+    </div>
 
-                        <span class="button button--flex button--small button--link projects__button">
-                            View More
-                            <i class="uil uil-arrow-right button__icon"></i>
-                        </span>
+    <span class="button button--flex button--small button--link projects__button">
+        View More
+        <i class="uil uil-arrow-right button__icon"></i>
+    </span>
+
+    <div class="projects__modal">
 
                         <div class="projects__modal">
                             <div class="projects__modal-content">
