--- a/index.html
+++ b/index.html
@@ -648,18 +648,23 @@
                 <div class="projects__container container grid">
                     <!--==================== PROJECTS 1 ====================-->
               
-                 <div class="projects__content project1">
-    <div>
-        <i class="uil uil-swatchbook projects__icon"></i>
-        <h3 class="projects__title">Coding Week ML</h3>
-    </div>
+                 <section class="projects section" id="projects" data-id="projects">
+                <h2 class="section__title">Projects</h2>
+                <span class="section__subtitle">Involved Projects</span>
 
-    <span class="button button--flex button--small button--link projects__button">
-        View More
-        <i class="uil uil-arrow-right button__icon"></i>
-    </span>
+                <div class="projects__container container grid">
+                    <!--==================== PROJECTS 1 ====================-->
+              
+                 <div class="projects__content">
+                         <div>
+                            <i class="uil uil-swatchbook projects__icon"></i>
+                            <h3 class="projects__title">Machine Learning Project</h3>
+                        </div>
 
-    <div class="projects__modal">
+                        <span class="button button--flex button--small button--link projects__button">
+                            View More
+                            <i class="uil uil-arrow-right button__icon"></i>
+                        </span>
 
                         <div class="projects__modal">
                             <div class="projects__modal-content">
