--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
                 <div class="projects__content">
                         <div>
                             <i class="uil uil-swatchbook projects__icon"></i>
-                            <h3 class="projects__title">Machine Learning Project</h3>
+                            <h3 class="projects__title">Detection Of Microcalcifications In Mammography</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link projects__button">
@@ -661,7 +661,7 @@
 
                         <div class="projects__modal">
                             <div class="projects__modal-content">
-                                <h4 class="projects__modal-title">Detection Of Microcalcifications In Mammography </h4>
+                                <h4 class="projects__modal-title">View the project <a href="https://github.com/salmabenslimane/Mammogram-Microcalcification-Detection" title="View the code of my project" target="_blank">here</a>.</h4>
                                 <i class="uil uil-times projects__modal-close"></i>
 
                                 <ul class="projects__modal-projects grid">
@@ -676,6 +676,9 @@
                                     <li class="projects__modal-project">
                                         <i class="uil uil-check-circle projects__modal-icon"></i>
                                         <p>Overcame challenges posed by a highly imbalanced dataset while being supervised by ECC CODING WEEK. View the code of my project <a href="https://github.com/salmabenslimane/Mammogram-Microcalcification-Detection" title="View the code of my project" target="_blank">here</a>.</p>
+                                     <li class="projects__modal-project">
+                                        <i class="uil uil-check-circle projects__modal-icon"></i>
+                                        <p>View the code of my project <a href="https://github.com/salmabenslimane/Mammogram-Microcalcification-Detection" title="View the code of my project" target="_blank">here</a>.</p>
                                     </li>
                                 </ul>
                             </div>
@@ -686,7 +689,7 @@
                     <div class="projects__content">
                         <div>
                             <i class="uil uil-swatchbook projects__icon"></i>
-                            <h3 class="projects__title">AI & IOT Project</h3>
+                            <h3 class="projects__title">PredictA Industry: the AI solution for predictive maintenance</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link projects__button">
@@ -696,7 +699,7 @@
 
                         <div class="projects__modal">
                             <div class="projects__modal-content">
-                                <h4 class="projects__modal-title">PredictA Industry: the real-time solution for predictive maintenance</h4>
+                                <h4 class="projects__modal-title">View the project <a href="https://predicta.saadioui.com/" title="View the project" target="_blank">here</a>. </h4>
                                 <i class="uil uil-times projects__modal-close"></i>
 
                                 <ul class="projects__modal-projects grid">
