--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
                                 <i class="uil uil-user nav__icon"></i> About
                             </a>
                         </li>
+                                                <li class="nav__item">
+                            <a href="#qualifications" class="nav__link">
+                                <i class="uil uil-user nav__icon"></i> Qualifications
+                            </a>
+                        </li>
                         <li class="nav__item">
                             <a href="#skills" class="nav__link">
                                 <i class="uil uil-file-alt nav__icon"></i> Skills
@@ -164,7 +169,7 @@
                         <div class="home__data">
                             <h1 class="home__title">Hi, I am Salma Benslimane</h1>
                             <h3 class="home__subtitle">Welcome to my portfolio! </h3>
-                            <p class="home__description">Second Year Data science student at Centrale Casablanca. Currently in exchange at Centrale Marseille with a specialization in Digital Society and AI Engineering.</p>
+                            <p class="home__description"> Currently studying Digital Society and AI Engineering at Centrale Marseille </p>
                             <a href="#contact" class="button button--flex">
                                 Contact Me <i class="uil uil-message button__icon"></i>
                             </a>
@@ -191,7 +196,7 @@
 
 
                     <div class="about__data">
-                        <p class="about__description">It all started with a passion for mathematics, computer science, and the inner workings of technology. Now, I'm pursuing Systems' Engineering, with a specialization in Information Science and Digital Society. Welcome to my portfolio.</p>
+                        <p class="about__description">It all started with a passion for mathematics, computer science, and the inner workings of technology. Now, I'm pursuing Systems' Engineering, with a specialization in Information Science and Digital Society.</p>
 
 
                         <div class="about__buttons">
@@ -560,11 +565,11 @@
                              <div class="qualification__data">
                                 <div>
                                     <span class="qualification__degree">Meknes, Morocco</span>
-                                    <h3 class="qualification__tittle">Flowers High School</h3>
-                                    <span class="qualification__subtitle">Mathematical Science Baccalaureat - Mention Très bie</span>
+                                    <h3 class="qualification__tittle">Classes Préparatoires aux Grandes Ecoles</h3>
+                                    <span class="qualification__subtitle">Mathematics - Physics - Engineering Science</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2019 - 2020
+                                        2020 - 2022
                                     </div>
                                 </div>
                                 <div>
@@ -584,11 +589,11 @@
 
                                  <div>
                                      <span class="qualification__degree">Meknes, Morocco</span>
-                                    <h3 class="qualification__tittle">Nuclear Engineer</h3>
-                                    <span class="qualification__subtitle">Hacettepe University</span>
+                                    <h3 class="qualification__tittle">Flowers High School</h3>
+                                    <span class="qualification__subtitle">Mathematical Science Baccalaureat - Mention Très bien</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2008 - 2013
+                                        2019 - 2020
                                     </div>
                                 </div> 
 
@@ -603,8 +608,8 @@
                             <!--==================== QUALIFICATION  1 ====================-->
                             <div class="qualification__data">
                                <div>
-                                   <h3 class="qualification__tittle">Python Developer Intern at LCM AICHA</h3>
-                                   <span class="qualification__subtitle">Development of an Inventory management plateform for the digital transformation of AICHA</span>
+                                   <h3 class="qualification__tittle">Digital Transformation Intern at LCM AICHA</h3>
+                                   <span class="qualification__subtitle">Development of an Inventory management plateform with Python for the digital transformation of AICHA</span>
                                    <div class="qualification__calendar">
                                        <i class="uil uil-calendar-alt"></i>
                                        2023
@@ -621,11 +626,11 @@
                             <!--==================== QUALIFICATION  1 ====================-->
                             <div class="qualification__data">
                                <div>
-                                   <h3 class="qualification__tittle"></h3>
-                                   <span class="qualification__subtitle"></span>
+                                   <h3 class="qualification__tittle">Data Analyst Intern at YAZAKI</h3>
+                                   <span class="qualification__subtitle">Exploratory Data Analysis (EDA) and Dashboard creation in the context of predictive maintenance.  </span>
                                    <div class="qualification__calendar">
                                        <i class="uil uil-calendar-alt"></i>
-                                       
+                                       2023
                                    </div>
                                </div>
                                <div>
@@ -643,7 +648,7 @@
             <!--==================== PROJECTS ====================-->
             <section class="projects section" id="projects" data-id="projects">
                 <h2 class="section__title">Projects</h2>
-                <span class="section__subtitle">Involved Projects</span>
+                <span class="section__subtitle">Some of My Recent Works</span>
 
                 <div class="projects__container container grid">
                     <!--==================== PROJECTS 1 ====================-->
@@ -707,7 +712,11 @@
                                     </li>
                                     <li class="projects__modal-project">
                                         <i class="uil uil-check-circle projects__modal-icon"></i>
-                                        <p>Our focus has led us to develop an intelligent real-time solution dedicated to predictive maintenance utilizing Apache and AWS technologies. PredictA stands out by delivering an intelligent ecosystem for early anomaly detection, featuring diverse functionalities such as real-time monitoring dashboards, precise estimation of equipment lifespan, advanced anomaly detection, intelligent alerts, and AI-driven recommendations.</p>
+                                        <p>Our focus has led us to develop an intelligent real-time solution dedicated to predictive maintenance utilizing Apache and AWS technologies. </p>
+                                    </li>
+                                     <li class="projects__modal-project">
+                                        <i class="uil uil-check-circle projects__modal-icon"></i>
+                                        <p>PredictA stands out by delivering an intelligent ecosystem for early anomaly detection, featuring diverse functionalities such as real-time monitoring dashboards, precise estimation of equipment lifespan, advanced anomaly detection, intelligent alerts, and AI-driven recommendations.</p>
                                     </li>
                                       <li class="projects__modal-project">
                                         <i class="uil uil-check-circle projects__modal-icon"></i>
@@ -736,15 +745,6 @@
                                 <i class="uil uil-times projects__modal-close"></i>
 
                                 <ul class="projects__modal-projects grid">
-                                    <li class="projects__modal-project">
-                                        <i class="uil uil-check-circle projects__modal-icon"></i>
-                                        <p>A GAN is a type of artificial intelligence model that consists of two neural networks, a generator, and a discriminator, working in tandem to generate realistic data.
-
-
-
-
-</p>
-                                    </li>
                                         <li class="projects__modal-project-ind">
                                             <i class="uil uil-check projects__modal-icon"></i>
                                             <p>Implemented a GAN  model to enhance cybersecurity by generating synthetic signals indistinguishable from authentic ones.  Our innvative approach led us to venture into uncharted territory by embracing the complexities of multicarrier waveforms. </p>
@@ -926,14 +926,14 @@
             <!--==================== civic ====================-->
             <section class="about2" id="about2">
                 <h2 class="section__title">Civic & Interests</h2>
-                <span class="section__subtitle">Parascolar</span>
+                <span class="section__subtitle">Other than Data Science</span>
 
                 <div class="about__container container grid">
                     <img src="assets/img/about2.png" alt="Erol Bicer Nuclear Power Plants Summit Session" class="about__img">
 
 
                     <div class="about__data">
-                        <p class="about__description">With a deep passion for music, I am an artist who enjoys singing and playing the guitar. In fact, I had the privilege of performing at the Cérémonie de remise des diplômes 2022. For my commitment to extracurricular, I co-founded and currently serve as the Vice President of Club Studio Centrale Casablanca. I also have taken on responsibilities as the Deputy Secretary-General at Bureau des étudiants and Community Manager for the Bureau des sports.</p>
+                        <p class="about__description">With a deep passion for music, I am an artist who enjoys singing and playing the guitar. In fact, I had the privilege of performing at the Cérémonie de Remise des Diplômes 2023. For the same commitement to my passion, I co-founded and currently serve as the Vice President of Club Studio Centrale Casablanca. I have also have taken on responsibilities as the Deputy Secretary-General at Bureau des étudiants and Community Manager for the Bureau des sports and Bureau des étudiants.</p>
 
 
 
@@ -1029,15 +1029,24 @@
                 <div class="footer__container container grid">
                     <div>
                         <a href="#" class="footer__title">Salma Benslimane</a><br>
-                        <span class="footer__subtitle">Generalist Engineer</span>
+                        <span class="footer__subtitle">Data Scientist</span>
                     </div>
 
                     <ul class="footer__links">
+                         <li>
+                            <a href="#skills" class="footer__link">Skills</a>
+                        </li>
+                      <li>
+                            <a href="#qualification" class="footer__link">Qualifications</a>
+                        </li>
                         <li>
                             <a href="#projects" class="footer__link">Projects</a>
                         </li>
                         <li>
                             <a href="#paper" class="footer__link">Certifications</a>
+                        </li>
+                         <li>
+                            <a href="#Civic" class="footer__link">Civic</a>
                         </li>
                         <li>
                             <a href="#contact" class="footer__link">Contact</a>
