--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                             </a>
                         </li>
                                                 <li class="nav__item">
-                            <a href="#qualifications" class="nav__link">
-                                <i class="uil uil-user nav__icon"></i> Qualifications
+                            <a href="#" class="nav__link">
+                                <i class="uil uil-user nav__icon"></i> QUALIFICATION
                             </a>
                         </li>
                         <li class="nav__item">
@@ -1037,7 +1037,7 @@
                             <a href="#skills" class="footer__link">Skills</a>
                         </li>
                       <li>
-                            <a href="#qualification" class="footer__link">Qualifications</a>
+                            <a href="#QUALIFICATION" class="footer__link">Qualifications</a>
                         </li>
                         <li>
                             <a href="#projects" class="footer__link">Projects</a>
