--- a/index.html
+++ b/index.html
@@ -621,11 +621,17 @@
                                </div>
                            </div>
 
-                            <!--==================== QUALIFICATION  2 ====================-->
-                        <div class="qualification__content" data-content id="work">
+                    
                             <!--==================== QUALIFICATION  1 ====================-->
                             <div class="qualification__data">
-                               <div>
+                               <div></div> 
+
+                                 <div>
+                                    <span class="qualification__rounder"></span> 
+                                     <span class="qualification__line"></span> 
+                                 </div> 
+
+                                 <div>
                                    <h3 class="qualification__tittle">Data Analyst Intern at YAZAKI</h3>
                                    <span class="qualification__subtitle">Exploratory Data Analysis (EDA) and Dashboard creation in the context of predictive maintenance.  </span>
                                    <div class="qualification__calendar">
@@ -633,10 +639,7 @@
                                        2023
                                    </div>
                                </div>
-                               <div>
-                                   <span class="qualification__rounder"></span>
-                                   <span class="qualification__line"></span>
-                               </div>
+                             
                            </div>
 
                        </div>
